Release Notes QA Fixes (#297)
* fix(release notes): make release notes field RTE + fix scrollbars

* fix(tests): update tests to work with new release notes editor

* fix(tests): update tests to work with new release notes editor

* fix(tests): update tests to work with new release notes editor

--- a/deployment/frontend/src/styles/rte.css
+++ b/deployment/frontend/src/styles/rte.css
@@ -273,3 +273,12 @@ body {
   height: 0;
   pointer-events: none;
 }
+
+.tiptap>*+* {
+    margin-top: 0.75em;
+}
+
+.tiptap ul,
+.tiptap ol {
+    padding: 0 1.5rem;
+}
